# one-million-iops

./: .gitignore
vector_search/: README.md  benchmark.py  pyproject.toml
vector_search_rs/: Cargo.toml  Cargo.toml~  README.md
vector_search_rs/.cargo/: config.toml
vector_search_rs/src/: main.rs
