[package]
name = "vector-search-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
lance = { git="https://github.com/westonpace/lance", branch="blog/one-million-iops" }
lance-core = { git="https://github.com/westonpace/lance", branch="blog/one-million-iops" }
lance-file = { git="https://github.com/westonpace/lance", branch="blog/one-million-iops" }
lance-index = { git="https://github.com/westonpace/lance", branch="blog/one-million-iops" }
lance-io = { git="https://github.com/westonpace/lance", branch="blog/one-million-iops" }
lance-linalg = { git="https://github.com/westonpace/lance", branch="blog/one-million-iops" }

tokio = { version = "1.0", features = ["full"] }
arrow = "57"
arrow-array = "57"
arrow-schema = "57"
env_logger = "0.11"
futures = "0.3"
rand = "0.8"
rand_distr = "0.4"
indicatif = "0.17"
anyhow = "1.0"
walkdir = "2.0"
libc = "0.2"
jemallocator = "0.5"
crossbeam-channel = "0.5"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
